Closed Bug 603152 Opened 14 years ago Closed 14 years ago

Inner windows have their principals change out from under them

Categories

(Core :: DOM: Navigation, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mrbkap, Assigned: mrbkap)

References

(Depends on 1 open bug)

Details

Attachments

(1 file)

Attached patch FixSplinter Review
When we do window.open, we create the window and *then* set its principal. This doesn't work for compartments. Boris, I spoke with you about this at the all hands a while ago. This is going to land, we'll fix any review comments after the fact.
Attachment #482119 - Flags: review?(bzbarsky)
Comment on attachment 482119 [details] [diff] [review] Fix This makes all the opener script principal stuff dead code, right? Is there a followup patch that removes it? r=me, I think
Attachment #482119 - Flags: review?(bzbarsky) → review+
Interfaces were thawed for 2.0 I thought, why the new addition?
Because at this point (after several betas, etc) people are developing binary extensions against 2.0, and we've had crashes appear when we change interfaces. Or put another way, the interface freeze for a stable branch starts with the betas, not with the release.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Depends on: 637644
Depends on: 672119
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: