bug 603152 - Inner windows principals must remain constant. If we want to change them, change the inner window instead. r=bz